# art_ing_course

./: .gitignore  README.md  pyproject.toml
homeworks/HW01/: HW01.ipynb
homeworks/HW02/: HW02.ipynb  data_feature.csv
homeworks/HW03/eda-cli/: README.md  pyproject.toml
homeworks/HW04/eda-cli/: .gitignore  README.md  pyproject.toml
homeworks/HW05/: HW05.ipynb
homeworks/HW05/artifacts/: baseline.joblib  best_logreg.joblib  logreg.joblib
homeworks/HW05/catboost_info/: learn_error.tsv  time_left.tsv
homeworks/HW06/: HW06.ipynb  report.md
homeworks/HW06/artifacts/: best_model_meta.json  metrics_test.json  search_summaries.json
homeworks/HW07/: HW07.ipynb  report.md
homeworks/HW08-09/: HW08-09.ipynb  report.md
homeworks/HW10-11/: HW10-11.ipynb  report.md
seminars_notebook/: S02-demo-01-pandas-tables.ipynb  S02-demo-02-matplotlib-basics.ipynb  S05-demo-03-experiments.ipynb  S06-demo-01-decision-tree.ipynb  S06-demo-03-boosting-stacking.ipynb  S06-demo-04-experiments.ipynb  S07-demo-01-kmeans-basics-and-k-selection.ipynb  S07-demo-02-dbscan-density-and-noise.ipynb  S07-demo-03-hierarchical-clustering-and-dendrogram.ipynb  S07-demo-04-cluster-metrics-pca-tsne.ipynb  S07-demo-05-engineering-unsupervised-experiment.ipynb  S08-demo-01-pytorch-primer.ipynb  S08-demo-02-pytorch-mlp-basics.ipynb  S09-demo-01-optimizers-and-lr.ipynb  S09-demo-02-schedulers-and-clipping.ipynb  S10-demo-01-cnn-from-scratch.ipynb  S10-demo-02-transfer-learning-resnet.ipynb  S11-demo-01-detection-pretrained.ipynb  S11-demo-02-segmentation-pretrained.ipynb
(+20 files in other folders)
