[project]
name = "polina"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jupyterlab>=4.5.0",
    "matplotlib>=3.9.4",
    "notebook>=7.5.0",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "seaborn>=0.13.2",
]

[tool.uv.workspace]
members = [
    "homeworks",
]
