[project]
name = "polina"
version = "0.1.0"
description = "Data analysis and ML experiments"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "joblib>=1.5.3",
    "jupyterlab>=4.0.0,<5.0.0",
    "matplotlib>=3.8.0,<4.0.0",
    "notebook>=7.0.0,<8.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0,<2.2.0",
    "plotly>=5.0.0,<6.0.0",
    "scikit-learn>=1.3.0,<2.0.0",
    "seaborn>=0.12.0,<1.0.0",
]

[tool.uv]
